--- a/rmf-deployment/charts/rmf-core-modules/site-specific/nav_graphs/5.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/site-specific/nav_graphs/5.yaml
@@ -21,16 +21,28 @@ levels:
       - 3
       - {speed_limit: 0}
     - - 4
-      - 5
-      - {speed_limit: 0}
-    - - 5
-      - 4
-      - {speed_limit: 0}
-    - - 5
       - 3
       - {speed_limit: 0}
     - - 3
+      - 4
+      - {speed_limit: 0}
+    - - 2
       - 5
+      - {speed_limit: 0}
+    - - 5
+      - 2
+      - {speed_limit: 0}
+    - - 6
+      - 4
+      - {speed_limit: 0}
+    - - 4
+      - 6
+      - {speed_limit: 0}
+    - - 6
+      - 7
+      - {speed_limit: 0}
+    - - 7
+      - 6
       - {speed_limit: 0}
     vertices:
     - - 7.258516456702581
@@ -45,11 +57,17 @@ levels:
     - - 10.691288332598015
       - -10.838484294231613
       - {is_charger: false, is_parking_spot: false, is_passthrough_point: false, name: ''}
-    - - 15.958945647664544
-      - -12.742325639741383
+    - - 13.481597100721125
+      - -12.981434676041829
+      - {is_holding_point: true, name: ''}
+    - - 13.441759661563406
+      - -5.639023273316428
+      - {is_holding_point: true, name: ''}
+    - - 15.517864170888641
+      - -14.989680496632307
       - {is_charger: true, is_holding_point: true, is_parking_spot: true, name: kabam_L1_0}
-    - - 14.528258293506807
-      - -12.253050989747138
+    - - 14.56640770558157
+      - -15.496679430997567
       - {is_holding_point: true, name: ''}
   L5:
     lanes:
@@ -172,14 +190,14 @@ levels:
     - - 10.386278595990753
       - -10.65941458243697
       - {name: ''}
-    - - -19.146157286252105
-      - -15.02108922402347
+    - - -35.91565288535803
+      - -15.818945283817666
       - {name: kabam_Lab_0}
-    - - -19.17143527754775
-      - -16.403992179792105
+    - - -33.544445117265866
+      - -17.06652675921789
       - {name: kabam_Lab_1}
-    - - -19.14793153028741
-      - -17.506344630025346
+    - - -19.095278154285282
+      - -17.375422992810336
       - {name: ''}
     - - -19.18851445272609
       - -22.87350336887487
