--- a/rmf-deployment/charts/rmf-core-modules/site-specific/building_yamls/galen.building.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/site-specific/building_yamls/galen.building.yaml
@@ -35,37 +35,39 @@ levels:
       - [262.571, 248.627, fid5]
       - [224.978, 104.356, fid6]
     lanes:
-      - [7, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [8, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [11, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [9, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
       - [11, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
       - [16, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [7, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [11, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [7, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [0, 18, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [18, 19, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [0, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [17, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
       - [20, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
       - [0, 21, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [21, 15, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [24, 25, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [25, 26, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [29, 30, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [30, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [15, 31, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [31, 32, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [32, 25, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [25, 29, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [22, 33, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [33, 27, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [27, 28, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [23, 27, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [31, 25, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [31, 30, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [25, 31, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [31, 29, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [29, 32, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [32, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 34, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [17, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [17, 33, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [18, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [0, 36, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [36, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 35, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [36, 34, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [22, 27, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [10, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [15, 31, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
     layers:
       lvl1_carto:
         color: [1, 0, 0, 0.5]
@@ -93,7 +95,7 @@ levels:
       - [341.746, 313.955, 0, ""]
       - [184.499, 249.293, 0, ""]
       - [126.327, 66.56100000000001, 0, "", {is_passthrough_point: [4, false]}]
-      - [86, 67.279, 0, "", {lift_cabin: [1, B]}]
+      - [85.167, 67.38500000000001, 0, "", {lift_cabin: [1, B]}]
       - [86, 101.41, 0, "", {lift_cabin: [1, A]}]
       - [111.295, 66.70399999999999, 0, L1_liftB_wait]
       - [111.577, 101.3, 0, L1_liftA_wait]
@@ -102,12 +104,12 @@ levels:
       - [183.423, 114.504, 0, ""]
       - [126.553, 177.15, 0, mir250_charger, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true]}]
       - [126.598, 25.993, 0, mir_L1_1, {is_holding_point: [4, true]}]
-      - [189.084, 150.973, 0, kabam_L1_0, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true]}]
-      - [157.62, 156.06, 0, "", {is_holding_point: [4, true]}]
-      - [180.71, 174.25, 0, panasonic_L1_0, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true]}]
-      - [172.133, 145.176, 0, "", {is_holding_point: [4, true]}]
+      - [183.858, 177.6, 0, kabam_L1_0, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true]}]
+      - [141.84, 168.257, 0, "", {is_holding_point: [4, true]}]
+      - [148.951, 186.147, 0, panasonic_L1_0, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true]}]
+      - [159.732, 153.806, 0, "", {is_holding_point: [4, true]}]
       - [126.553, 153.453, 0, mir_L1_0, {is_holding_point: [4, true]}]
-      - [222.514, 290.58, 0, ""]
+      - [225.908, 300.982, 0, ""]
       - [308.928, 297.01, 0, L1_0_drop_off, {dock_name: [1, L1_0_drop_off]}]
       - [121.044, 255.45, 0, L1_1_pick_up, {dock_name: [1, L1_1_pick_up]}]
       - [138.923, 255.45, 0, L1_1_entry]
@@ -115,10 +117,13 @@ levels:
       - [292.304, 296.383, 0, L1_0_entry]
       - [308.928, 297.01, 0, L1_0_pick_up, {dock_name: [1, L1_0_pick_up]}]
       - [171.23, 271.76, 0, ""]
-      - [217.841, 274.585, 0, ""]
-      - [134.845, 233.337, 0, ""]
       - [164.173, 248.392, 0, L1_mir_start, {is_parking_spot: [4, true]}]
-      - [262.036, 289.326, 0, ""]
+      - [151.859, 248.549, 0, ""]
+      - [211.127, 258.89, 0, ""]
+      - [172.585, 183.607, 0, "", {is_holding_point: [4, true]}]
+      - [159.26, 66.812, 0, "", {is_holding_point: [4, true]}]
+      - [140.259, 44.32, 0, "", {is_holding_point: [4, true]}]
+      - [138.01, 100.946, 0, ""]
   L5:
     doors:
       - [29, 30, {motion_axis: [1, start], motion_degrees: [3, 90], motion_direction: [2, 1], name: [1, dormakaba_door1], plugin: [1, normal], right_left_ratio: [3, 1], type: [1, sliding]}]
@@ -139,10 +144,6 @@ levels:
       - [20, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [20, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0.3]}]
       - [11, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0.3]}]
-      - [11, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0.3]}]
-      - [10, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [20, 6, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0.3]}]
-      - [20, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0.3]}]
       - [1, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [22, 23, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [25, 26, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
@@ -153,8 +154,6 @@ levels:
       - [2, 17, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [1, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [22, 35, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [13, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [16, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [0, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [22, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
       - [22, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
@@ -167,7 +166,6 @@ levels:
       - [14, 36, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [36, 3, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [3, 37, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [37, 38, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [3, 39, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
       - [0, 17, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
       - [28, 21, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 4], orientation: [1, ""], speed_limit: [3, 0]}]
@@ -188,6 +186,15 @@ levels:
       - [53, 33, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [53, 34, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [7, 54, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [54, 55, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [12, 15, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [15, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [61, 60, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 8], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [60, 62, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 8], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [60, 63, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 8], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [63, 64, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 8], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [37, 65, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [65, 38, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
     layers:
       {}
     vertices:
@@ -228,24 +235,35 @@ levels:
       - [647.408, 418.905, 0, panasonic_L5_2]
       - [1221.658, 47.943, 0, mir_L5_0, {is_holding_point: [4, true], is_parking_spot: [4, true]}]
       - [732.731, 418.87, 0, mir_L5_1]
-      - [683.602, 329.934, 0, ""]
-      - [664.704, 313.082, 0, mir_Lab_0]
+      - [683.153, 330.849, 0, ""]
+      - [341.426, 315.206, 0, mir_Lab_0]
       - [625.712, 419.522, 0, mir_L5_2]
       - [751.481, 411.542, 0, kabam_L5_1]
       - [604.612, 411.962, 0, kabam_L5_2]
-      - [684.403, 281.451, 0, kabam_Lab_0]
+      - [406.754, 297.903, 0, kabam_Lab_0]
       - [210.379, 247.531, 0, r3_1]
       - [287.446, 247.531, 0, r3_2]
       - [208.537, 217.992, 0, leo_1]
       - [286.353, 216.42, 0, leo_2]
-      - [684.251, 304.365, 0, kabam_Lab_1]
-      - [684.853, 322.622, 0, ""]
+      - [446.276, 318.113, 0, kabam_Lab_1]
+      - [685.7, 320.443, 0, ""]
       - [685.216, 411.542, 0, ""]
       - [931.064, 410.369, 0, ""]
       - [1175.768, 410.141, 0, ""]
-      - [688.821, 329.452, 0, ""]
-      - [690.254, 418.806, 0, ""]
-      - [397.046, 329.511, 0, panasonic_Lab_1]
+      - [681.611, 329.095, 0, ""]
+      - [682.635, 419.255, 0, ""]
+      - [397.046, 329.511, 0, panasonic_Lab_2]
+      - [351.789, 283.422, 0, panasonic_Lab_1]
+      - [704.346, 265.781, 0, clean1_start]
+      - [679.079, 313.678, 0, clean1, {dock_name: [1, clean1], is_cleaning_zone: [4, true]}]
+      - [660.091, 235.507, 0, clean2_start]
+      - [637.216, 274.791, 0, clean2, {dock_name: [1, clean2], is_cleaning_zone: [4, true]}]
+      - [655.42, 249.828, 0, path_727_start]
+      - [654.696, 221.024, 0, entrance_2, {is_charger: [4, true], is_holding_point: [4, true], is_parking_spot: [4, true]}]
+      - [635.8150000000001, 249.485, 0, path_727, {dock_name: [1, path_727], is_cleaning_zone: [4, true]}]
+      - [658.138, 304.718, 0, path_194_start]
+      - [637.747, 303.269, 0, path_194, {dock_name: [1, path_194], is_cleaning_zone: [4, true]}]
+      - [425.916, 330.088, 0, ""]
 lifts:
   A:
     depth: 1
