--- a/rmf-deployment/charts/rmf-core-modules/values.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/values.yaml
@@ -179,8 +179,15 @@ lionsbot:
   r3:
     RMF_FLEET_ADAPTER: fleet_adapter_r3
     RMF_FLEET_ADAPTER_CONFIG_FILE: /opt/rmf/install/fleet_adapter_r3/share/fleet_adapter_r3/config/config.yaml
-    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: 6.yaml
+    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: 8.yaml
   leoscrub:
     RMF_FLEET_ADAPTER: fleet_adapter_leoscrub
     RMF_FLEET_ADAPTER_CONFIG_FILE: /opt/rmf/install/fleet_adapter_leoscrub/share/fleet_adapter_leoscrub/config/config.yaml
-    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: 7.yaml
+    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: 8.yaml
+
+#gaussian
+ecobot:
+  RMF_FLEET_ADAPTER: fleet_adapter_ecobot
+  RMF_FLEET_ADAPTER_CONFIG_FILE: /opt/rmf/install/fleet_adapter_ecobot/share/fleet_adapter_ecobot/config.yaml
+  RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: 7.yaml
+  
