Trying out rmf web

--- a/rmf-deployment/.helmignore
+++ b/rmf-deployment/.helmignore
@@ -46,17 +46,17 @@ panasonic.yaml
 mir.yaml
 lionsbot.yaml
 
-rmf-core-modules.yaml
-rmf-web-modules.yaml
+# rmf-core-modules.yaml
+# rmf-web-modules.yaml
 # rmf-site-modules.yaml
 
 # building-configmap.yaml
 # cyclonedds-configmap.yaml
 # dorma-configmap.yaml
 # floorplan-configmap.yaml
-keycloak-secrets.yaml
+# keycloak-secrets.yaml
 # kone-configmap.yaml
-lionsbot-leoscrub-configmap.yaml
-lionsbot-r3-configmap.yaml
-mir-configmap.yaml
-nav-graph-configmap.yaml
+# lionsbot-leoscrub-configmap.yaml
+# lionsbot-r3-configmap.yaml
+# mir-configmap.yaml
+# nav-graph-configmap.yaml
